--- a/src/index.html
+++ b/src/index.html
@@ -8,16 +8,17 @@
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
             line-height: 1.6;
-            background-color: #f6f8fa;
-            color: #24292e;
+            background-color: #151b23; /* Cor de fundo escura */
+            color: #ccc; /* Cor do texto clara */
             max-width: 800px;
             margin: 0 auto;
             padding: 2rem;
         }
         h1 {
             text-align: center;
-            border-bottom: 1px solid #e1e4e8;
+            border-bottom: 1px solid #414868;
             padding-bottom: 0.5rem;
+            color: #70a5fd;
         }
         form {
             display: flex;
@@ -28,9 +29,11 @@
         input[type="text"], select {
             padding: 0.5rem;
             font-size: 1rem;
-            border: 1px solid #d1d5da;
+            border: 1px solid #414868;
             border-radius: 6px;
             margin-right: 0.5rem;
+            background-color: #1a1b27;
+            color: #ccc;
         }
         button {
             padding: 0.5rem 1rem;
@@ -52,7 +55,8 @@
         }
         img {
             max-width: 100%;
-            border: 1px solid #e1e4e8;
+            background-color: #1a1b27;
+            border: 1px solid #414868;
             border-radius: 6px;
         }
     </style>
