--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,7 @@
 <body>
     <h1>Gerador de Estatísticas do GitHub</h1>
     <form id="github-form">
-        <input type="text" id="username" placeholder="Usuário ou URL do GitHub" required>
+        <input type="text" id="username" placeholder="Seu nome de usuário do GitHub" required>
         <select id="theme-selector">
             <option value="tokyonight">Tokyonight</option>
             <option value="dracula">Dracula</option>
