--- a/functions/src/index.html
+++ b/functions/src/index.html
@@ -67,6 +67,10 @@
       <input type="text" id="username" placeholder="Seu nome de usuário do GitHub" required>
       <select id="theme-selector">
         <option value="tokyonight">Tokyonight</option>
+        <option value="dark">Dark</option>
+        <option value="dracula">Dracula</option>
+        <option value="gruvbox">Gruvbox</option>
+        <option value="onedark">One Dark</option>
       </select>
       <button type="submit">Gerar Estatísticas</button>
     </form>
