--- a/functions/src/index.html
+++ b/functions/src/index.html
@@ -66,11 +66,14 @@
     <form id="github-form">
       <input type="text" id="username" placeholder="Seu nome de usuário do GitHub" required>
       <select id="theme-selector">
-        <option value="tokyonight">Tokyonight</option>
+        <option value="cobalt">Cobalt</option>
         <option value="dark">Dark</option>
         <option value="dracula">Dracula</option>
         <option value="gruvbox">Gruvbox</option>
+        <option value="merko">Merko</option>
         <option value="onedark">One Dark</option>
+        <option value="radical">Radical</option>
+        <option value="tokyonight">Tokyonight</option>
       </select>
       <button type="submit">Gerar Estatísticas</button>
     </form>
