--- a/public/index.html
+++ b/public/index.html
@@ -92,7 +92,7 @@
 
         statsContainer.innerHTML = `
           <img src="https://github-readme-stats.vercel.app/api?username=${username}&theme=${theme}&show_icons=true" alt="GitHub Stats">
-          <img src="https://github-readme-stats.vercel.app/api/top-langs?username=${username}&theme=${theme}&layout=compact" alt="Top Languages">
+          <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=${username}&theme=${theme}&layout=compact" alt="Top Languages">
         `;
       });
     </script>
