--- a/public/index.html
+++ b/public/index.html
@@ -49,7 +49,7 @@
       }
       #stats-container {
         display: flex;
-        flex-direction: column; /* Revertido para 'column' */
+        flex-direction: column;
         align-items: center;
         gap: 1rem;
       }
