--- a/public/index.html
+++ b/public/index.html
@@ -4,140 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Stats Generator</title>
-    <style>
-      body {
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", 
-                      Roboto, Helvetica, Arial, sans-serif;
-        line-height: 1.6;
-        background-color: #151b23;
-        color: #ccc;
-        max-width: 900px;
-        margin: 0 auto;
-        padding: 2rem;
-      }
-      h1 {
-        text-align: center;
-        border-bottom: 1px solid #414868;
-        padding-bottom: 0.5rem;
-        color: #70a5fd;
-      }
-      form {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        margin-bottom: 2rem;
-      }
-      input[type="text"], select {
-        padding: 0.5rem;
-        font-size: 1rem;
-        border: 1px solid #414868;
-        border-radius: 6px;
-        margin-right: 0.5rem;
-        background-color: #1a1b27;
-        color: #ccc;
-      }
-      button {
-        padding: 0.5rem 1rem;
-        font-size: 1rem;
-        color: #fff;
-        background-color: #28a745;
-        border: 1px solid rgba(27, 31, 35, .15);
-        border-radius: 6px;
-        cursor: pointer;
-      }
-      button:hover {
-        background-color: #218838;
-      }
-      #stats-container {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 1rem;
-        min-height: 380px; 
-      }
-      img {
-        max-width: 100%;
-        border: 1px solid #414868;
-        border-radius: 6px;
-      }
-      .error-message {
-          color: #ef5350;
-          font-weight: bold;
-      }
-      .skeleton-loader {
-        width: 100%;
-        max-width: 900px;
-        height: 380px;
-        background-color: #21252b; 
-        border-radius: 6px;
-        animation: pulse 1.5s infinite ease-in-out;
-      }
-
-      @keyframes pulse {
-        0% {
-          background-color: #21252b;
-        }
-        50% {
-          background-color: #282c34;
-        }
-        100% {
-          background-color: #21252b;
-        }
-      }
-
-    </style>
+    <link rel="stylesheet" href="assets/estilos.css">
   </head>
   <body>
-    <h1>Gerador de Estatísticas do GitHub</h1>
-    <form id="github-form">
-      <input type="text" id="username" placeholder="Seu nome de usuário do GitHub" required>
-      <select id="theme-selector">
-        <option value="cobalt">Cobalt</option>
-        <option value="dark">Dark</option>
-        <option value="dracula">Dracula</option>
-        <option value="gruvbox">Gruvbox</option>
-        <option value="merko">Merko</option>
-        <option value="onedark">One Dark</option>
-        <option value="radical">Radical</option>
-        <option value="tokyonight" selected>Tokyonight</option>
-      </select>
-      <button type="submit">Gerar Estatísticas</button>
-    </form>
-    <div id="stats-container"></div>
-    <script>
-      document.getElementById('github-form').addEventListener('submit', function(event) {
-        event.preventDefault();
-        const username = document.getElementById('username').value;
-        if (!username) {
-            alert('Por favor, insira um nome de usuário do GitHub.');
-            return;
-        }
-        const theme = document.getElementById('theme-selector').value;
-        const statsContainer = document.getElementById('stats-container');
-        
-        // 1. Limpa o container e adiciona o skeleton loader
-        statsContainer.innerHTML = ''; 
-        const skeleton = document.createElement('div');
-        skeleton.className = 'skeleton-loader';
-        statsContainer.appendChild(skeleton);
-
-        const dashboardUrl = `/api/dashboard?username=${username}&theme=${theme}`;
-        
-        const dashboardImg = new Image();
-        dashboardImg.src = dashboardUrl;
-        dashboardImg.alt = 'GitHub Dashboard';
-
-        // 2. Quando a imagem carregar, substitui o skeleton pela imagem
-        dashboardImg.onload = function() {
-            statsContainer.innerHTML = '';
-            statsContainer.appendChild(dashboardImg);
-        };
-
-        // 3. Em caso de erro, substitui o skeleton pela mensagem de erro
-        dashboardImg.onerror = function() {
-            statsContainer.innerHTML = '<p class="error-message">Erro ao gerar as estatísticas. Verifique o nome de usuário ou tente novamente mais tarde.</p>';
-        };
-      });
-    </script>
+    <main>
+      <h1>Gerador de Estatísticas do GitHub</h1>
+      <form id="github-form">
+        <input type="text" id="username" placeholder="Seu nome de usuário do GitHub" required>
+        <select id="theme-selector">
+          <option value="cobalt">Cobalt</option>
+          <option value="dark">Dark</option>
+          <option value="dracula">Dracula</option>
+          <option value="gruvbox">Gruvbox</option>
+          <option value="merko">Merko</option>
+          <option value="onedark">One Dark</option>
+          <option value="radical">Radical</option>
+          <option value="tokyonight" selected>Tokyonight</option>
+        </select>
+        <button type="submit">Gerar Estatísticas</button>
+      </form>
+      <div id="stats-container"></div>
+    </main>
+    <script src="assets/app.js"></script>
   </body>
 </html>
